--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,11 @@
 main {
   padding: 0 50px;
   display: flex;
-  flex-wrap: wrap;
 }
 
 #product-section {
   display: flex;
+  flex: 1;
   flex-direction: column;
 }
 
@@ -128,6 +128,113 @@ main {
   font-size: 18px;
 }
 
+.cart{
+  color: var( --button-color-primary);
+  padding: 0 24px 24px 24px;
+  background-color: var(--white);
+  width: 400px;
+  height: fit-content;
+  border-radius: 10px;
+}
+
+.order-total{
+  display: flex;
+  place-items: center;
+  padding: 10px 0;
+}
+
+.total-label{
+  flex:1;
+  color: var(--font-color-primary);
+}
+
+.total-price{
+  color: var(--font-color-primary);
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.cart-item{
+  display: flex;
+  place-items: center;
+}
+
+.item-info{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 10px;
+  padding: 10px 0;
+  border-bottom: solid 1px var(--white-off);
+}
+
+.price-base{
+  color: var(--font-color-secondary);
+  font-weight: 400;
+}
+
+.price-item-total{
+  color: var( --font-color-tertiary);
+  font-weight: 700;
+}
+
+.item-name{
+  color: var(--font-color-primary);
+  font-weight: 700;
+}
+
+.quant-number{
+  color: var(--button-color-primary);
+  font-weight: 700;
+}
+
+.item-quan-price{
+  display: flex;
+  gap: 15px;
+}
+.stupid-box .tree {
+  height: 25px;
+  width: 25px;
+}
+.stupid-box {
+  background-color: var(--background-color);
+  padding: 15px;
+  display: flex;
+  place-items: center;
+  place-content: center;
+  gap: 5px;
+  color: var(--font-color-primary);
+  border-radius: 10px;
+}
+
+.order-btn {
+  background-color: var(--button-color-primary);
+  color: var(--white);
+  font-weight: 550;
+  border: solid 1px var(--button-color-secondary);
+  width: 160px;
+  height: 42px;
+  border-radius: 21px;
+  width: 100%;
+  margin: 20px 0 0 0;
+}
+
+
+.cart-btn{
+  padding: 1px;
+  border-radius: 50%;
+  height: 15px;
+  width: 15px;
+  display: flex;
+  place-content: center;
+  background-color: transparent;
+  border: solid 2px var(--remove-item-color)
+}
+
+#items-container{
+  display: flex;
+  flex-direction: column;
+}
 
 .hidden {
   display: none;
