feat: confirm modal implemented

--- a/src/base.css
+++ b/src/base.css
@@ -23,4 +23,5 @@ body {
     font-weight: 400;
     color: var(--font-color-primary);
     background-color: var(--background-color);
+    height: 150%;
 }
