--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,7 @@ main {
   place-items: center;
   place-content: center;
   margin-top: -21px;
+  margin-bottom: 10px;
 }
 
 .butt {
@@ -77,6 +78,12 @@ main {
   border: solid 2px var(--white);
   border-radius: 50%;
   margin: 0 20px;
+}
+
+.cart-section{
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .cart-butt {
@@ -130,7 +137,8 @@ main {
 
 .cart{
   color: var( --button-color-primary);
-  padding: 0 24px 24px 24px;
+  margin-top: 24px;
+  padding: 1px 24px 24px 24px;
   background-color: var(--white);
   width: 400px;
   height: fit-content;
@@ -157,6 +165,8 @@ main {
 .cart-item{
   display: flex;
   place-items: center;
+  border-bottom: solid 1px var(--white-off);
+  padding: 20px 0;
 }
 
 .item-info{
@@ -164,8 +174,6 @@ main {
   flex-direction: column;
   flex: 1;
   gap: 10px;
-  padding: 10px 0;
-  border-bottom: solid 1px var(--white-off);
 }
 
 .price-base{
@@ -236,6 +244,95 @@ main {
   flex-direction: column;
 }
 
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #00000077;
+  min-height: 100%;
+  width: 100%;
+  height: fit-content;
+  box-sizing: border-box;
+  overflow: auto;
+  padding: 100px 0;
+}
+
+.modal-adjust {
+  position: absolute;
+  box-sizing: border-box;
+  left: 50%;
+  transform: translate(-50%, 0); 
+  display: flex;
+  flex-direction: column;
+}
+.modal-spacer {
+  height: 100px;
+}
+.confirm-modal {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white);
+  border-radius: 10px;
+  color: var(--font-color-primary);
+  gap: 20px;
+  width: 600px;
+}
+
+.confirm-ico {
+  width: 48px;
+  height: 48px;
+}
+
+.order-details {
+  background-color: var(--background-color);
+  flex: 1;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.confirm-header {
+  margin: 0;
+}
+
+.confirm-sub {
+  color: var(--font-color-secondary);
+}
+
+.confirm-title-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.order-item {
+  display: flex;
+  gap: 15px;
+  padding: 10px 0;
+  place-items: center;
+  width: 100%;
+  border-bottom: solid 1px var(--white-off);
+  padding: 20px 0;
+}
+
+.order-item-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.confirm-thumb {
+  border-radius: 10px;
+  height: 75px;
+  width: 75px;
+}
+
+
 .hidden {
   display: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
